--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
         <version>3.6.2.Final</version>
         <scope>provided</scope>
     </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.12.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.8-dmr</version>
+        </dependency>
 </dependencies>
 
 <properties>
