--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,17 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.8-dmr</version>
         </dependency>
+    <dependency>
+        <groupId>org.jboss.weld.module</groupId>
+        <artifactId>weld-ejb</artifactId>
+        <version>3.1.3.Final</version>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.6.4</version>
+    </dependency>
+
 </dependencies>
 
 <properties>
