--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,23 @@
         <artifactId>jackson-annotations</artifactId>
         <version>2.6.4</version>
     </dependency>
+    <dependency>
+        <groupId>org.mapstruct</groupId>
+        <artifactId>mapstruct</artifactId>
+        <version>${org.mapstruct.version}</version>
+    </dependency>
+<!--    <dependency>-->
+<!--        <groupId>org.modelmapper</groupId>-->
+<!--        <artifactId>modelmapper</artifactId>-->
+<!--        <version>2.3.7</version>-->
+<!--    </dependency>-->
 
 </dependencies>
 
 <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
 </properties>
 
 <build>
@@ -63,6 +74,22 @@
             <version>3.2.2</version>
             <configuration>
                 <failOnMissingWebXml>false</failOnMissingWebXml>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <annotationProcessorPaths>
+                    <path>
+                        <groupId>org.mapstruct</groupId>
+                        <artifactId>mapstruct-processor</artifactId>
+                        <version>${org.mapstruct.version}</version>
+                    </path>
+                </annotationProcessorPaths>
             </configuration>
         </plugin>
     </plugins>
