--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
         <groupId>javax</groupId>
         <artifactId>javaee-api</artifactId>
-        <version>7.0</version>
+        <version>8.0.1</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -52,7 +52,25 @@
         <artifactId>mapstruct</artifactId>
         <version>${org.mapstruct.version}</version>
     </dependency>
-<!--    <dependency>-->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>2.23.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>2.3.0.RELEASE</version>
+    </dependency>
+
+    <!--    <dependency>-->
 <!--        <groupId>org.modelmapper</groupId>-->
 <!--        <artifactId>modelmapper</artifactId>-->
 <!--        <version>2.3.7</version>-->
